samples/_failures_safe/1761251452_c26717_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69a342c9.c: In function ‘main’:
./samples/SAFE/__tmp_69a342c9.c:151:34: error: expected ‘)’ at end of input
  151 |         size_t len = strlen(input
      |                            ~     ^
      |                                  )
./samples/SAFE/__tmp_69a342c9.c:151:9: error: expected declaration or statement at end of input
  151 |         size_t len = strlen(input
      |         ^~~~~~
./samples/SAFE/__tmp_69a342c9.c:151:9: error: expected declaration or statement at end of input
